JumpScript/tests/baselines/reference/callWithWrongNumberOfTypeArguments.errors.txt
tests/cases/compiler/callWithWrongNumberOfTypeArguments.jump(3,1): error TS2558: Expected 2 type arguments, but got 1.
tests/cases/compiler/callWithWrongNumberOfTypeArguments.jump(5,1): error TS2558: Expected 2 type arguments, but got 3.


==== tests/cases/compiler/callWithWrongNumberOfTypeArguments.jump (2 errors) ====
    function f<T, U>() { }
    
    f<number>();
    ~~~~~~~~~~~
!!! error TS2558: Expected 2 type arguments, but got 1.
    f<number, string>();
    f<number, string, number>();
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2558: Expected 2 type arguments, but got 3.